# dskek

./: .gitignore  main.py  pyproject.toml
dskek/: channels.py  converters.py  discord.py  discord_bot.py  env.py  gemini.py  models.py  proxy_clients.py  voicebot.py  youtube.py
